--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -78,6 +78,6 @@
     @apply border-border;
   }
   body {
-    @apply text-black dark:bg-background dark:text-foreground;
+    @apply text-black;
   }
 }
